Diffuse directional lighting

--- a/AntonOpenGL/AntonOpenGL.vcxproj
+++ b/AntonOpenGL/AntonOpenGL.vcxproj
@@ -142,8 +142,6 @@
   <ItemGroup>
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\IndexBuffer.h" />
-    <ClInclude Include="src\Mesh.h" />
-    <ClInclude Include="src\Model.hpp" />
     <ClInclude Include="src\Renderer.h" />
     <ClInclude Include="src\Shader.h" />
     <ClInclude Include="src\Texture.h" />
@@ -308,128 +306,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\Fragment.shader" />
-    <None Include="Shaders\LightFragment.shader" />
-    <None Include="Shaders\VertTexture.shader" />
+    <None Include="Shaders\Fragment2.shader" />
     <None Include="Shaders\Vertex.shader" />
-    <None Include="Shaders\LightVertex.shader" />
-    <None Include="Shaders\FragTexture.shader" />
-    <None Include="src\vendor\glm\detail\func_common.inl" />
-    <None Include="src\vendor\glm\detail\func_common_simd.inl" />
-    <None Include="src\vendor\glm\detail\func_exponential.inl" />
-    <None Include="src\vendor\glm\detail\func_exponential_simd.inl" />
-    <None Include="src\vendor\glm\detail\func_geometric.inl" />
-    <None Include="src\vendor\glm\detail\func_geometric_simd.inl" />
-    <None Include="src\vendor\glm\detail\func_integer.inl" />
-    <None Include="src\vendor\glm\detail\func_integer_simd.inl" />
-    <None Include="src\vendor\glm\detail\func_matrix.inl" />
-    <None Include="src\vendor\glm\detail\func_matrix_simd.inl" />
-    <None Include="src\vendor\glm\detail\func_packing.inl" />
-    <None Include="src\vendor\glm\detail\func_packing_simd.inl" />
-    <None Include="src\vendor\glm\detail\func_trigonometric.inl" />
-    <None Include="src\vendor\glm\detail\func_trigonometric_simd.inl" />
-    <None Include="src\vendor\glm\detail\func_vector_relational.inl" />
-    <None Include="src\vendor\glm\detail\func_vector_relational_simd.inl" />
-    <None Include="src\vendor\glm\detail\type_gentype.inl" />
-    <None Include="src\vendor\glm\detail\type_half.inl" />
-    <None Include="src\vendor\glm\detail\type_mat.inl" />
-    <None Include="src\vendor\glm\detail\type_mat2x2.inl" />
-    <None Include="src\vendor\glm\detail\type_mat2x3.inl" />
-    <None Include="src\vendor\glm\detail\type_mat2x4.inl" />
-    <None Include="src\vendor\glm\detail\type_mat3x2.inl" />
-    <None Include="src\vendor\glm\detail\type_mat3x3.inl" />
-    <None Include="src\vendor\glm\detail\type_mat3x4.inl" />
-    <None Include="src\vendor\glm\detail\type_mat4x2.inl" />
-    <None Include="src\vendor\glm\detail\type_mat4x3.inl" />
-    <None Include="src\vendor\glm\detail\type_mat4x4.inl" />
-    <None Include="src\vendor\glm\detail\type_mat4x4_simd.inl" />
-    <None Include="src\vendor\glm\detail\type_vec.inl" />
-    <None Include="src\vendor\glm\detail\type_vec1.inl" />
-    <None Include="src\vendor\glm\detail\type_vec2.inl" />
-    <None Include="src\vendor\glm\detail\type_vec3.inl" />
-    <None Include="src\vendor\glm\detail\type_vec4.inl" />
-    <None Include="src\vendor\glm\detail\type_vec4_simd.inl" />
-    <None Include="src\vendor\glm\ext\vec1.inl" />
-    <None Include="src\vendor\glm\ext\vector_relational.inl" />
-    <None Include="src\vendor\glm\gtc\bitfield.inl" />
-    <None Include="src\vendor\glm\gtc\color_space.inl" />
-    <None Include="src\vendor\glm\gtc\constants.inl" />
-    <None Include="src\vendor\glm\gtc\epsilon.inl" />
-    <None Include="src\vendor\glm\gtc\integer.inl" />
-    <None Include="src\vendor\glm\gtc\matrix_access.inl" />
-    <None Include="src\vendor\glm\gtc\matrix_inverse.inl" />
-    <None Include="src\vendor\glm\gtc\matrix_transform.inl" />
-    <None Include="src\vendor\glm\gtc\noise.inl" />
-    <None Include="src\vendor\glm\gtc\packing.inl" />
-    <None Include="src\vendor\glm\gtc\quaternion.inl" />
-    <None Include="src\vendor\glm\gtc\quaternion_simd.inl" />
-    <None Include="src\vendor\glm\gtc\random.inl" />
-    <None Include="src\vendor\glm\gtc\reciprocal.inl" />
-    <None Include="src\vendor\glm\gtc\round.inl" />
-    <None Include="src\vendor\glm\gtc\type_precision.inl" />
-    <None Include="src\vendor\glm\gtc\type_ptr.inl" />
-    <None Include="src\vendor\glm\gtc\ulp.inl" />
-    <None Include="src\vendor\glm\gtc\vec1.inl" />
-    <None Include="src\vendor\glm\gtx\associated_min_max.inl" />
-    <None Include="src\vendor\glm\gtx\bit.inl" />
-    <None Include="src\vendor\glm\gtx\closest_point.inl" />
-    <None Include="src\vendor\glm\gtx\color_encoding.inl" />
-    <None Include="src\vendor\glm\gtx\color_space.inl" />
-    <None Include="src\vendor\glm\gtx\color_space_YCoCg.inl" />
-    <None Include="src\vendor\glm\gtx\common.inl" />
-    <None Include="src\vendor\glm\gtx\compatibility.inl" />
-    <None Include="src\vendor\glm\gtx\component_wise.inl" />
-    <None Include="src\vendor\glm\gtx\dual_quaternion.inl" />
-    <None Include="src\vendor\glm\gtx\easing.inl" />
-    <None Include="src\vendor\glm\gtx\euler_angles.inl" />
-    <None Include="src\vendor\glm\gtx\extend.inl" />
-    <None Include="src\vendor\glm\gtx\extended_min_max.inl" />
-    <None Include="src\vendor\glm\gtx\exterior_product.inl" />
-    <None Include="src\vendor\glm\gtx\fast_exponential.inl" />
-    <None Include="src\vendor\glm\gtx\fast_square_root.inl" />
-    <None Include="src\vendor\glm\gtx\fast_trigonometry.inl" />
-    <None Include="src\vendor\glm\gtx\float_notmalize.inl" />
-    <None Include="src\vendor\glm\gtx\functions.inl" />
-    <None Include="src\vendor\glm\gtx\gradient_paint.inl" />
-    <None Include="src\vendor\glm\gtx\handed_coordinate_space.inl" />
-    <None Include="src\vendor\glm\gtx\hash.inl" />
-    <None Include="src\vendor\glm\gtx\integer.inl" />
-    <None Include="src\vendor\glm\gtx\intersect.inl" />
-    <None Include="src\vendor\glm\gtx\io.inl" />
-    <None Include="src\vendor\glm\gtx\log_base.inl" />
-    <None Include="src\vendor\glm\gtx\matrix_cross_product.inl" />
-    <None Include="src\vendor\glm\gtx\matrix_decompose.inl" />
-    <None Include="src\vendor\glm\gtx\matrix_factorisation.inl" />
-    <None Include="src\vendor\glm\gtx\matrix_interpolation.inl" />
-    <None Include="src\vendor\glm\gtx\matrix_major_storage.inl" />
-    <None Include="src\vendor\glm\gtx\matrix_operation.inl" />
-    <None Include="src\vendor\glm\gtx\matrix_query.inl" />
-    <None Include="src\vendor\glm\gtx\matrix_transform_2d.inl" />
-    <None Include="src\vendor\glm\gtx\mixed_product.inl" />
-    <None Include="src\vendor\glm\gtx\norm.inl" />
-    <None Include="src\vendor\glm\gtx\normal.inl" />
-    <None Include="src\vendor\glm\gtx\normalize_dot.inl" />
-    <None Include="src\vendor\glm\gtx\number_precision.inl" />
-    <None Include="src\vendor\glm\gtx\optimum_pow.inl" />
-    <None Include="src\vendor\glm\gtx\orthonormalize.inl" />
-    <None Include="src\vendor\glm\gtx\perpendicular.inl" />
-    <None Include="src\vendor\glm\gtx\polar_coordinates.inl" />
-    <None Include="src\vendor\glm\gtx\projection.inl" />
-    <None Include="src\vendor\glm\gtx\quaternion.inl" />
-    <None Include="src\vendor\glm\gtx\raw_data.inl" />
-    <None Include="src\vendor\glm\gtx\rotate_normalized_axis.inl" />
-    <None Include="src\vendor\glm\gtx\rotate_vector.inl" />
-    <None Include="src\vendor\glm\gtx\scalar_relational.inl" />
-    <None Include="src\vendor\glm\gtx\spline.inl" />
-    <None Include="src\vendor\glm\gtx\std_based_type.inl" />
-    <None Include="src\vendor\glm\gtx\string_cast.inl" />
-    <None Include="src\vendor\glm\gtx\texture.inl" />
-    <None Include="src\vendor\glm\gtx\transform.inl" />
-    <None Include="src\vendor\glm\gtx\transform2.inl" />
-    <None Include="src\vendor\glm\gtx\type_aligned.inl" />
-    <None Include="src\vendor\glm\gtx\type_trait.inl" />
-    <None Include="src\vendor\glm\gtx\vector_angle.inl" />
-    <None Include="src\vendor\glm\gtx\vector_query.inl" />
-    <None Include="src\vendor\glm\gtx\wrap.inl" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="gl.log" />
